update filter rating, price
