# resources/lang/en/validation.php
@@ -266,6 +266,14 @@ return [
             'required' => 'id_required',
             'integer' => 'id_integer',
         ],
+        'minPrice' => [
+            'required' => 'min_price_required',
+            'string' => 'min_price_string',
+        ],
+        'maxPrice' => [
+            'required' => 'max_price_required',
+            'string' => 'max_price_string',
+        ],
     ],
 
     /*
